--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
             </div>
         </div>
 
+        <div class="instructions">
+            <h4 style="color:var(--accent-gold);">Easy Steps:</h4>
+            <p style="font-size: 0.8rem; margin-top:10px; color: var(--text-secondary);">Enter number -> Wait for Code -> Link in WhatsApp.</p>
+        </div>
+
         <div class="footer">© 2026 ADEEL-MINI | Support: 923035512967</div>
     </div>
 
