--- a/index.html
+++ b/index.html
@@ -12,19 +12,13 @@
             --accent-gold: #ffd700;
             --text-primary: #ffffff;
             --text-secondary: rgba(255, 255, 255, 0.8);
-            --border-color: rgba(255, 215, 0, 0.4);
+            --border-glow: #ffd700;
             --bg-card: rgba(0, 0, 0, 0.5); 
             --skin: #ffdbac;
         }
 
-        /* Essential Fix for Page Jumping */
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        html, body { 
-            width: 100%; 
-            height: 100%; 
-            overflow-x: hidden; 
-            scroll-behavior: smooth;
-        }
+        html, body { width: 100%; height: 100%; overflow-x: hidden; scroll-behavior: smooth; }
 
         @keyframes slowBGChange {
             0% { background-color: #800000; }
@@ -44,33 +38,28 @@
         }
 
         .container { width: 100%; max-width: 450px; }
-
         .header { text-align: center; margin-bottom: 30px; padding: 20px; position: relative; }
 
         @keyframes slowColorChange {
             0% { color: #ff0000; text-shadow: 0 0 20px #ff0000; }
-            14% { color: #ffd700; text-shadow: 0 0 20px #ffd700; }
-            28% { color: #00ff00; text-shadow: 0 0 20px #00ff00; }
-            42% { color: #00ffff; text-shadow: 0 0 20px #00ffff; }
+            33% { color: #ffd700; text-shadow: 0 0 20px #ffd700; }
+            66% { color: #00ff00; text-shadow: 0 0 20px #00ff00; }
             100% { color: #ff0000; text-shadow: 0 0 20px #ff0000; }
         }
 
         .logo {
-            font-size: 2.6rem; 
-            font-weight: 900; 
-            white-space: nowrap; 
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-            animation: slowColorChange 35s infinite linear;
+            font-size: 2.6rem; font-weight: 900; white-space: nowrap; 
+            display: inline-flex; align-items: center; justify-content: center;
+            gap: 10px; animation: slowColorChange 10s infinite linear;
+            position: relative;
         }
 
+        /* --- MORE SPARKLES (3X INCREASED) --- */
         .name-sparkle {
-            position: absolute; width: 7px; height: 7px; border-radius: 50%;
-            animation: fireworkBurst 5s infinite ease-in-out;
+            position: absolute; width: 6px; height: 6px; border-radius: 50%;
+            animation: fireworkBurst 4s infinite ease-in-out;
             background: currentColor; pointer-events: none;
-            box-shadow: 0 0 15px currentColor;
+            box-shadow: 0 0 12px currentColor;
         }
 
         @keyframes fireworkBurst {
@@ -79,16 +68,25 @@
             100% { transform: translate(var(--nx), var(--ny)) scale(0.1); opacity: 0; }
         }
 
-        /* --- WALKING MAN CODE START (Size Reduced to 50%) --- */
-        .cartoon-box {
-            height: 90px; position: relative; overflow: hidden;
-            border-bottom: 1px solid var(--border-color); margin-bottom: 15px;
+        /* --- ANIMATED BOX BORDERS --- */
+        @keyframes borderRainbow {
+            0% { border-color: #ffd700; box-shadow: 0 0 10px rgba(255,215,0,0.3); }
+            33% { border-color: #ff00ff; box-shadow: 0 0 15px rgba(255,0,255,0.4); }
+            66% { border-color: #00ffff; box-shadow: 0 0 10px rgba(0,255,255,0.3); }
+            100% { border-color: #ffd700; box-shadow: 0 0 10px rgba(255,215,0,0.3); }
         }
-        .walking-man {
-            position: absolute; bottom: 5px; left: -50px;
-            animation: moveAcross 12s infinite linear;
-            transform: scale(0.5); /* 50% Smaller Size */
+
+        .server-card, .main-card, .instructions {
+            background: var(--bg-card); 
+            border: 2px solid var(--accent-gold);
+            border-radius: 20px; padding: 25px; margin-bottom: 25px; text-align: center;
+            backdrop-filter: blur(10px);
+            animation: borderRainbow 6s infinite linear; /* Colorful edges */
         }
+
+        /* Walking Man (50% Size) */
+        .cartoon-box { height: 90px; position: relative; overflow: hidden; margin-bottom: 15px; }
+        .walking-man { position: absolute; bottom: 5px; left: -50px; animation: moveAcross 12s infinite linear; transform: scale(0.5); }
         .human { position: relative; width: 50px; height: 110px; }
         .h-head { width: 30px; height: 38px; background: var(--skin); border-radius: 40% 40% 50% 50%; position: absolute; left: 10px; top: 0; z-index: 10; }
         .h-hair { width: 34px; height: 18px; background: #222; position: absolute; top: -4px; left: -2px; border-radius: 15px 15px 5px 5px; }
@@ -113,7 +111,6 @@
             95% { left: -50px; transform: scale(0.5) scaleX(-1); }
             100% { left: -50px; transform: scale(0.5) scaleX(1); }
         }
-        /* --- WALKING MAN CODE END --- */
 
         .energy-wrapper { display: flex; align-items: center; justify-content: center; gap: 20px; margin: 25px auto; }
         .energy-bar { width: 90px; height: 90px; position: relative; }
@@ -131,12 +128,6 @@
             width: 45px; height: 45px; background: rgba(0, 0, 0, 0.4); color: var(--accent-gold);
             border-radius: 50%; border: 2px solid var(--accent-gold); cursor: pointer;
             display: flex; align-items: center; justify-content: center;
-        }
-
-        .server-card, .main-card, .instructions {
-            background: var(--bg-card); border: 2px solid var(--border-color);
-            border-radius: 20px; padding: 25px; margin-bottom: 25px; text-align: center;
-            backdrop-filter: blur(10px);
         }
 
         .stat-value { color: var(--accent-gold); font-weight: 800; font-size: 1.8rem; }
@@ -172,10 +163,17 @@
         <div class="header">
             <div class="logo">
                 <i class="fab fa-whatsapp"></i> ADEEL-MINI
-                <div class="name-sparkle" style="--nx: 150px; --ny: -100px; color: #ff0044; left: 10%;"></div>
-                <div class="name-sparkle" style="--nx: -150px; --ny: 100px; color: #00ff66; right: 10%;"></div>
-                <div class="name-sparkle" style="--nx: 100px; --ny: 130px; color: #ffff00; left: 50%;"></div>
-                <div class="name-sparkle" style="--nx: 0px; --ny: -160px; color: #ff00ff; top: 0;"></div>
+                <div class="name-sparkle" style="--nx: 160px; --ny: -110px; color: #ff0044; left: 10%; animation-delay: 0s;"></div>
+                <div class="name-sparkle" style="--nx: -160px; --ny: 110px; color: #00ff66; right: 10%; animation-delay: 0.5s;"></div>
+                <div class="name-sparkle" style="--nx: 120px; --ny: 140px; color: #ffff00; left: 50%; animation-delay: 1s;"></div>
+                <div class="name-sparkle" style="--nx: -120px; --ny: -140px; color: #00ffff; right: 50%; animation-delay: 1.5s;"></div>
+                <div class="name-sparkle" style="--nx: 0px; --ny: -170px; color: #ff00ff; top: 0; animation-delay: 2s;"></div>
+                <div class="name-sparkle" style="--nx: 190px; --ny: 60px; color: #ffffff; right: 0; animation-delay: 2.5s;"></div>
+                <div class="name-sparkle" style="--nx: -190px; --ny: -60px; color: #ff9900; left: 0; animation-delay: 3s;"></div>
+                <div class="name-sparkle" style="--nx: 60px; --ny: -190px; color: #00ffcc; top: 10%; animation-delay: 3.5s;"></div>
+                <div class="name-sparkle" style="--nx: -60px; --ny: 190px; color: #ff3300; bottom: 10%; animation-delay: 4s;"></div>
+                <div class="name-sparkle" style="--nx: 100px; --ny: -50px; color: #fff; left: 20%; animation-delay: 1.2s;"></div>
+                <div class="name-sparkle" style="--nx: -100px; --ny: 50px; color: #ffd700; right: 20%; animation-delay: 2.2s;"></div>
             </div>
             
             <div class="energy-wrapper">
