--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             --accent-gold: #ffd700;
             --text-primary: #ffffff;
             --text-secondary: rgba(255, 255, 255, 0.8);
-            --bg-card: rgba(0, 0, 0, 0.6); 
+            --border-glow: #ffd700;
+            --bg-card: rgba(0, 0, 0, 0.5); 
             --skin: #ffdbac;
         }
 
@@ -36,65 +37,79 @@
             justify-content: center;
         }
 
-        .container { width: 100%; max-width: 450px; }
+        .container { width: 100%; max-width: 450px; position: relative; }
 
-        /* --- LOGO & SPARKLES --- */
+        /* --- FLYING BIRDS ANIMATION --- */
+        .bird {
+            position: absolute; color: rgba(255,215,0,0.4); font-size: 12px;
+            animation: fly 15s infinite linear; pointer-events: none; z-index: 1;
+        }
+        @keyframes fly {
+            0% { left: -10%; top: 10%; transform: scale(1); }
+            50% { top: 15%; transform: scale(1.2); }
+            100% { left: 110%; top: 10%; transform: scale(1); }
+        }
+
         .header { text-align: center; margin-bottom: 30px; padding: 20px; position: relative; }
+
         @keyframes slowColorChange {
             0% { color: #ff0000; text-shadow: 0 0 20px #ff0000; }
             33% { color: #ffd700; text-shadow: 0 0 20px #ffd700; }
             66% { color: #00ff00; text-shadow: 0 0 20px #00ff00; }
             100% { color: #ff0000; text-shadow: 0 0 20px #ff0000; }
         }
-        .logo { font-size: 2.6rem; font-weight: 900; animation: slowColorChange 10s infinite linear; position: relative; }
+
+        .logo {
+            font-size: 2.6rem; font-weight: 900; white-space: nowrap; 
+            display: inline-flex; align-items: center; justify-content: center;
+            gap: 10px; animation: slowColorChange 10s infinite linear;
+            position: relative;
+        }
 
         .name-sparkle {
             position: absolute; width: 6px; height: 6px; border-radius: 50%;
             animation: fireworkBurst 4s infinite ease-in-out;
-            background: currentColor; pointer-events: none; box-shadow: 0 0 12px currentColor;
+            background: currentColor; pointer-events: none;
+            box-shadow: 0 0 12px currentColor;
         }
+
         @keyframes fireworkBurst {
             0% { transform: translate(0, 0) scale(1); opacity: 0; }
             20% { opacity: 1; }
             100% { transform: translate(var(--nx), var(--ny)) scale(0.1); opacity: 0; }
         }
 
-        /* --- SLOW RAINBOW BORDER & PARTICLES --- */
-        @keyframes slowBorderRainbow {
-            0% { border-color: #ffd700; box-shadow: 0 0 15px rgba(255, 215, 0, 0.4); }
-            25% { border-color: #ff0055; box-shadow: 0 0 15px rgba(255, 0, 85, 0.4); }
-            50% { border-color: #00ffff; box-shadow: 0 0 15px rgba(0, 255, 255, 0.4); }
-            75% { border-color: #00ff00; box-shadow: 0 0 15px rgba(0, 255, 0, 0.4); }
-            100% { border-color: #ffd700; box-shadow: 0 0 15px rgba(255, 215, 0, 0.4); }
+        /* --- SLOW RAINBOW BOXES WITH EXTRA PARTICLES --- */
+        @keyframes borderRainbow {
+            0% { border-color: #ffd700; box-shadow: 0 0 10px rgba(255,215,0,0.3); }
+            33% { border-color: #ff00ff; box-shadow: 0 0 15px rgba(255,0,255,0.4); }
+            66% { border-color: #00ffff; box-shadow: 0 0 10px rgba(0,255,255,0.3); }
+            100% { border-color: #ffd700; box-shadow: 0 0 10px rgba(255,215,0,0.3); }
         }
 
-        .animated-card {
+        .server-card, .main-card, .instructions {
             background: var(--bg-card); 
             border: 2px solid var(--accent-gold);
-            border-radius: 20px; padding: 25px; margin-bottom: 25px; 
-            text-align: center; backdrop-filter: blur(12px);
-            animation: slowBorderRainbow 12s infinite linear;
-            position: relative;
-            overflow: hidden;
+            border-radius: 20px; padding: 25px; margin-bottom: 25px; text-align: center;
+            backdrop-filter: blur(10px);
+            animation: borderRainbow 10s infinite linear;
+            position: relative; overflow: hidden;
         }
 
-        /* Small particles falling inside box borders */
-        .animated-card::before {
-            content: "✨"; position: absolute; top: -10px; left: 10%;
-            font-size: 10px; animation: particlesFall 5s infinite linear; opacity: 0.6;
+        /* EXTRA PARTICLES FALLING */
+        .particle {
+            position: absolute; background: var(--accent-gold);
+            width: 2px; height: 2px; border-radius: 50%;
+            opacity: 0.6; animation: fall linear infinite;
         }
-        .animated-card::after {
-            content: "❄️"; position: absolute; top: -10px; right: 20%;
-            font-size: 8px; animation: particlesFall 7s infinite linear; opacity: 0.4;
-        }
-
-        @keyframes particlesFall {
-            0% { transform: translateY(-10px) translateX(0); opacity: 0; }
-            20% { opacity: 1; }
-            100% { transform: translateY(200px) translateX(20px); opacity: 0; }
+        @keyframes fall {
+            0% { transform: translateY(-10px); opacity: 0; }
+            50% { opacity: 1; }
+            100% { transform: translateY(200px); opacity: 0; }
         }
 
         /* Walking Man (50% Size) */
+        .cartoon-box { height: 90px; position: relative; overflow: hidden; margin-bottom: 15px; }
         .walking-man { position: absolute; bottom: 5px; left: -50px; animation: moveAcross 12s infinite linear; transform: scale(0.5); }
         .human { position: relative; width: 50px; height: 110px; }
         .h-head { width: 30px; height: 38px; background: var(--skin); border-radius: 40% 40% 50% 50%; position: absolute; left: 10px; top: 0; z-index: 10; }
@@ -112,7 +127,6 @@
             100% { left: -50px; transform: scale(0.5) scaleX(1); }
         }
 
-        /* Rest of Styles */
         .energy-wrapper { display: flex; align-items: center; justify-content: center; gap: 20px; margin: 25px auto; }
         .energy-bar { width: 90px; height: 90px; position: relative; }
         .energy-circle { width: 100%; height: 100%; border-radius: 50%; border: 3px solid rgba(255, 215, 0, 0.2); position: relative; overflow: hidden; }
@@ -122,15 +136,25 @@
             top: 50%; left: 50%; transform: translate(-50%, -50%); display: flex; align-items: center; justify-content: center; 
             color: var(--accent-gold); z-index: 2; border: 2px solid var(--accent-gold); font-size: 2.2rem;
         }
+
         @keyframes rotateEnergy { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 
-        input[type="tel"] { width: 100%; padding: 15px; background: rgba(0, 0, 0, 0.4); border: 2px solid rgba(255,215,0,0.3); border-radius: 12px; color: #fff; text-align: center; outline: none; }
+        .music-btn {
+            width: 45px; height: 45px; background: rgba(0, 0, 0, 0.4); color: var(--accent-gold);
+            border-radius: 50%; border: 2px solid var(--accent-gold); cursor: pointer;
+            display: flex; align-items: center; justify-content: center;
+        }
+
+        input[type="tel"] { width: 100%; padding: 15px; background: rgba(0, 0, 0, 0.4); border: 2px solid var(--border-glow); border-radius: 12px; color: #fff; text-align: center; outline: none; }
         .btn { width: 100%; padding: 16px; background: var(--accent-gold); color: #800000; border: none; border-radius: 12px; font-weight: 800; cursor: pointer; margin-top: 15px; }
         .footer { text-align: center; padding: 20px; color: var(--text-secondary); font-size: 0.8rem; }
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="bird" style="animation-delay: 0s;"><i class="fas fa-dove"></i></div>
+        <div class="bird" style="animation-delay: 5s; top: 20%;"><i class="fas fa-dove"></i></div>
+
         <div class="header">
             <div class="logo">
                 <i class="fab fa-whatsapp"></i> ADEEL-MINI
@@ -141,27 +165,33 @@
             </div>
             
             <div class="energy-wrapper">
-                <button class="music-btn" style="width:45px; height:45px; border-radius:50%; border:2px solid var(--accent-gold); background:none; color:gold;" onclick="toggleMusic('music1', this)"><i class="fas fa-play"></i></button>
+                <button class="music-btn" onclick="toggleMusic('music1', this)"><i class="fas fa-play"></i></button>
                 <div class="energy-bar">
                     <div class="energy-circle"><div class="energy-fill"></div><div class="energy-center">🎩</div></div>
                 </div>
-                <button class="music-btn" style="width:45px; height:45px; border-radius:50%; border:2px solid var(--accent-gold); background:none; color:gold;" onclick="toggleMusic('music2', this)"><i class="fas fa-play"></i></button>
+                <button class="music-btn" onclick="toggleMusic('music2', this)"><i class="fas fa-play"></i></button>
             </div>
         </div>
 
         <audio id="music1" loop><source src="https://files.catbox.moe/s374zm.mp3" type="audio/mpeg"></audio>
         <audio id="music2" loop><source src="https://files.catbox.moe/l6ijvv.mp3" type="audio/mpeg"></audio>
 
-        <div class="animated-card">
-            <div style="display: flex; justify-content: space-evenly;">
+        <div class="server-card">
+            <div class="particle" style="left: 10%; animation-duration: 3s;"></div>
+            <div class="particle" style="left: 40%; animation-duration: 5s; animation-delay: 1s;"></div>
+            <div class="particle" style="left: 80%; animation-duration: 4s; animation-delay: 2s;"></div>
+            <div style="display: flex; justify-content: space-evenly; position: relative; z-index: 2;">
                 <div><span style="color:var(--accent-gold); font-size:1.8rem; font-weight:800;">50</span><br><small>Limit</small></div>
-                <div style="width:1px; background:rgba(255,215,0,0.3);"></div>
+                <div style="width:1px; background:var(--accent-gold); opacity: 0.3;"></div>
                 <div><span style="color:#00ff00; font-size:1.8rem;">●</span><br><small>Online</small></div>
             </div>
         </div>
 
-        <div class="animated-card">
-            <div style="height: 90px; position: relative; overflow: hidden;">
+        <div class="main-card">
+            <div class="particle" style="left: 20%; animation-duration: 4s;"></div>
+            <div class="particle" style="left: 60%; animation-duration: 6s; animation-delay: 1.5s;"></div>
+            <div class="particle" style="left: 90%; animation-duration: 3s; animation-delay: 0.5s;"></div>
+            <div class="cartoon-box">
                 <div class="walking-man">
                     <div class="human">
                         <div class="h-head"><div style="width:34px; height:18px; background:#222; position:absolute; top:-4px; left:-2px; border-radius:15px;"></div></div>
@@ -175,7 +205,7 @@
             <button class="btn" id="generateBtn">Generate Now</button>
         </div>
 
-        <div class="animated-card">
+        <div class="instructions">
             <h4 style="color:var(--accent-gold);">Easy Steps:</h4>
             <p style="font-size: 0.8rem; margin-top:10px;">Enter number -> Wait for Code -> Link in WhatsApp.</p>
         </div>
