--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +41,7 @@
 
         .container { width: 100%; max-width: 450px; position: relative; }
 
-        /* --- FLYING BIRDS ANIMATION --- */
+        /* Birds */
         .bird {
             position: absolute; color: rgba(255,215,0,0.4); font-size: 12px;
             animation: fly 15s infinite linear; pointer-events: none; z-index: 1;
@@ -79,7 +81,7 @@
             100% { transform: translate(var(--nx), var(--ny)) scale(0.1); opacity: 0; }
         }
 
-        /* --- SLOW RAINBOW BOXES WITH EXTRA PARTICLES --- */
+        /* --- BOXES WITH 3X PARTICLES --- */
         @keyframes borderRainbow {
             0% { border-color: #ffd700; box-shadow: 0 0 10px rgba(255,215,0,0.3); }
             33% { border-color: #ff00ff; box-shadow: 0 0 15px rgba(255,0,255,0.4); }
@@ -96,19 +98,18 @@
             position: relative; overflow: hidden;
         }
 
-        /* EXTRA PARTICLES FALLING */
+        /* INCREASED PARTICLES & MIXED ELEMENTS */
         .particle {
-            position: absolute; background: var(--accent-gold);
-            width: 2px; height: 2px; border-radius: 50%;
-            opacity: 0.6; animation: fall linear infinite;
+            position: absolute; color: var(--accent-gold);
+            font-size: 8px; opacity: 0; animation: fall linear infinite;
         }
         @keyframes fall {
-            0% { transform: translateY(-10px); opacity: 0; }
-            50% { opacity: 1; }
-            100% { transform: translateY(200px); opacity: 0; }
+            0% { transform: translateY(-20px) rotate(0deg); opacity: 0; }
+            20% { opacity: 0.7; }
+            100% { transform: translateY(250px) rotate(360deg); opacity: 0; }
         }
 
-        /* Walking Man (50% Size) */
+        /* Walking Man */
         .cartoon-box { height: 90px; position: relative; overflow: hidden; margin-bottom: 15px; }
         .walking-man { position: absolute; bottom: 5px; left: -50px; animation: moveAcross 12s infinite linear; transform: scale(0.5); }
         .human { position: relative; width: 50px; height: 110px; }
@@ -177,9 +178,15 @@
         <audio id="music2" loop><source src="https://files.catbox.moe/l6ijvv.mp3" type="audio/mpeg"></audio>
 
         <div class="server-card">
-            <div class="particle" style="left: 10%; animation-duration: 3s;"></div>
-            <div class="particle" style="left: 40%; animation-duration: 5s; animation-delay: 1s;"></div>
-            <div class="particle" style="left: 80%; animation-duration: 4s; animation-delay: 2s;"></div>
+            <div class="particle" style="left: 5%; animation-duration: 4s;">✨</div>
+            <div class="particle" style="left: 15%; animation-duration: 6s; animation-delay: 1s;">.</div>
+            <div class="particle" style="left: 25%; animation-duration: 3s;">💎</div>
+            <div class="particle" style="left: 35%; animation-duration: 5s; animation-delay: 2s;">*</div>
+            <div class="particle" style="left: 50%; animation-duration: 4s;">✨</div>
+            <div class="particle" style="left: 65%; animation-duration: 7s; animation-delay: 1.5s;">💎</div>
+            <div class="particle" style="left: 80%; animation-duration: 5s;">.</div>
+            <div class="particle" style="left: 95%; animation-duration: 4s; animation-delay: 0.5s;">*</div>
+            
             <div style="display: flex; justify-content: space-evenly; position: relative; z-index: 2;">
                 <div><span style="color:var(--accent-gold); font-size:1.8rem; font-weight:800;">50</span><br><small>Limit</small></div>
                 <div style="width:1px; background:var(--accent-gold); opacity: 0.3;"></div>
@@ -188,9 +195,15 @@
         </div>
 
         <div class="main-card">
-            <div class="particle" style="left: 20%; animation-duration: 4s;"></div>
-            <div class="particle" style="left: 60%; animation-duration: 6s; animation-delay: 1.5s;"></div>
-            <div class="particle" style="left: 90%; animation-duration: 3s; animation-delay: 0.5s;"></div>
+            <div class="particle" style="left: 10%; animation-duration: 5s;">💎</div>
+            <div class="particle" style="left: 20%; animation-duration: 4s; animation-delay: 1s;">✨</div>
+            <div class="particle" style="left: 30%; animation-duration: 6s;">.</div>
+            <div class="particle" style="left: 45%; animation-duration: 3s; animation-delay: 2s;">*</div>
+            <div class="particle" style="left: 60%; animation-duration: 5s;">✨</div>
+            <div class="particle" style="left: 75%; animation-duration: 4s; animation-delay: 1.5s;">💎</div>
+            <div class="particle" style="left: 85%; animation-duration: 6s;">.</div>
+            <div class="particle" style="left: 95%; animation-duration: 5s; animation-delay: 0.5s;">✨</div>
+
             <div class="cartoon-box">
                 <div class="walking-man">
                     <div class="human">
@@ -206,6 +219,10 @@
         </div>
 
         <div class="instructions">
+            <div class="particle" style="left: 15%; animation-duration: 5s;">✨</div>
+            <div class="particle" style="left: 50%; animation-duration: 4s; animation-delay: 2s;">💎</div>
+            <div class="particle" style="left: 85%; animation-duration: 6s;">*</div>
+            
             <h4 style="color:var(--accent-gold);">Easy Steps:</h4>
             <p style="font-size: 0.8rem; margin-top:10px;">Enter number -> Wait for Code -> Link in WhatsApp.</p>
         </div>
